# gongle

./: Dockerfile  README.md  docker-compose.yml  g-petey's-fits-the-latest-version-inserts.txt  g-petey-goes-off-on-more-rant.txt  structure.svc  temp.txt  test_db.py
bak/: app.py  app1.py  app_good3.py  index_slight_err6.html
config/: nginx.conf  prometheus.yml  supervisord.conf
gongle-web/: app.py  requirements.txt
gongle-web/static/: index.ht1  index.html  styles.css
google-web/: app.py  theatre_routes.py
google-web/static/: theatre.html
integration/: rust_bridge.py  theatre_api.rs
junk/bak/: index14.html
junk/temp/: index.html  index1.html  index10.html  index13.html  index16.html  index3.html  index4.html  index_working8.html
src/instance/: gongle.db
src/static/: index.html
temp/: index12.html  index14.html  index2.html  index5.html  index_good11.html  index_worksish9.html
wofl_obs-defuscrypt/: Cargo.toml
wofl_obs-defuscrypt/src/: theatre_routes.rs  web_theatre.rs
